# classnote

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  main.py
app/services/: rabbitmq.py  storage.py
app/templates/: index.html
worker/: asr.py  llm_client.py  summarizer.py  worker.py
